  called "wxbase294ud_vc110_amd64.dll" now.

- MSVC projects don't include neither wxUniversal nor ANSI (non-Unicode)
  configurations any more. The simplest way to build wxWidgets in these
  configurations if you need them is to use nmake from the command line with
  WXUNIV=1 or UNICODE=0 command line parameter respectively.


Major new features in this release
----------------------------------

- wxWidgets is now always built with Unicode support but provides the same
  simple (i.e. "char *"-tolerant) API as was available in ANSI build in the
  past.

- wxWidgets may now use either wchar_t (UTF-16/32) or UTF-8 internally,
  depending on what is optimal for the target platform.

- New propgrid library containing wxPropertyGrid and related classes.

- new ribbon library for advanced toolbars.

- Many enhancements to wxDataViewCtrl.

- Event loops, timers and sockets can now be used in wxBase, without GUI.

- Events can now be connected to any functor, not necessarily a method of
  wxEvtHandler-derived class. The compile-time safety was also improved.

- Documentation for wxWidgets has been converted from LaTex to C++ headers
  with Doxygen comments and significantly improved in the process (screenshots
  of various controls were added, more identifiers are now linked to their
  definition &c). Any reports about inaccuracies in the documentation are
  welcome (and due to using the simple Doxygen syntax it is now easier than
  ever to submit patches correcting them! :-)

- Support for persistent objects automatically saving and restoring their state
  was added.


2.9.5: (released ????-??-??)
----------------------------

INCOMPATIBLE CHANGES SINCE 2.9.4:

- The locale is not set automatically on startup any more, unlike in the
  previous 2.9 versions (but like in 2.8). Use wxLocale (preferred) or call
  wxApp::SetCLocale() from your overridden wxApp::Initialize() to restore the
  old behaviour.